--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.0
 Django==3.1.3
 django-extensions==3.0.9
 djangorestframework==3.12.2
+Pillow==8.0.1
 psycopg2-binary==2.8.6
 pytz==2020.4
 sqlparse==0.4.1
